[package]
name = "advent24"
version = "0.0.0"
edition = "2021"

[features]
day14-cli = ["dep:crossterm"]

[dependencies]
crossterm = { version = "0.28.1", optional = true }
either = "1.13.0"
itertools = "0.13.0"
num-integer = "0.1.46"
paste = "1.0.15"

[dev-dependencies]
indoc = "2.0.5"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(never)'] }
